--- a/sdkjs-plugins/content/textcleaner/index_about.html
+++ b/sdkjs-plugins/content/textcleaner/index_about.html
@@ -11,7 +11,8 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #F5F5F5;
+      background-color: var(--background-normal);
+      color: var(--text-normal);
     }
     .container {
       padding: 20px;
@@ -23,22 +24,22 @@
       font-size: 18px;
       font-weight: bold;
       margin-bottom: 10px;
-      color: #444;
+      color: var(--text-normal);
     }
     .version {
       font-size: 14px;
-      color: #666;
+      color: var(--text-secondary);
       margin-bottom: 15px;
     }
     .description {
       font-size: 13px;
-      color: #555;
+      color: var(--text-secondary);
       line-height: 1.5;
       margin-bottom: 20px;
     }
     .copyright {
       font-size: 12px;
-      color: #777;
+      color: var(--text-tertiary);
     }
   </style>
 </head>
